--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-spinners": "^0.5.1",
     "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
   },
