--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-facebook-login": "^4.1.1",
+    "react-fontawesome": "^1.6.1",
+    "react-google-login": "^5.0.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-spinners": "^0.5.1",
     "react-twitter-auth": "0.0.12",
     "redux": "^4.0.1",
-    "redux-saga": "^0.16.2"
+    "redux-saga": "^0.16.2",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=./src react-scripts start",
