--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint-plugin-react": "^7.12.0",
     "jsonwebtoken": "^8.4.0",
     "prop-types": "^15.6.2",
+    "ramda": "^0.26.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
